--- a/src/pages/profilesearch/profilesearch.html
+++ b/src/pages/profilesearch/profilesearch.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="dark">
-    <ion-title>Githib Profile Search</ion-title>
+    <ion-title>Github Profile Search</ion-title>
   </ion-navbar>
 
 </ion-header>
